--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ div {
    display: grid;
    justify-content: end;
    margin: 30px 40px;	
-   width: 790px;
+   width: 790px;   
 }
 
 .about__btn a {
@@ -192,12 +192,16 @@ div {
    text-align: center;
    padding: 5px 10px;
    border-radius: 2px;
-   letter-spacing: 0.10em;    
+   letter-spacing: 0.10em;       
 }
 
 .about__btn:hover {
    opacity: 0.80;
    transition: linear 0.10s; 
+}
+
+#modal {
+   display: none;
 }
 
 .servises {
