--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ li {
 
 .container {
       margin: 0 auto; 
-      max-width: 100%;
-
+      width: 100%;       
 }
 
 .header__logo {  
@@ -85,7 +84,7 @@ li {
       margin: -10px 5px;
       color: #fff;
       border: 1px solid #af9de5;
-      padding: 10px 10px 10px 10px;
+      padding: 10px 11px 10px 11px;
       border-radius: 50%; 
 }
 
@@ -112,8 +111,8 @@ li {
 .about__column {
      display: flex;    
      justify-content: space-between; 
-     max-width: 500px;
-     max-height: 425px;    
+     width: 500px;
+     height: 425px;    
 }
 
 .about__icon {     
@@ -124,7 +123,7 @@ li {
 
 
 .about__icon img {
-      max-width: 675px;                                     
+      width: 675px;                                     
 }
 
 
@@ -220,7 +219,7 @@ li {
 .servises__our {  
       display: flex;
       justify-content: center;   
-      max-width: 100%; 
+      width: 100%; 
 }
 
 .servises__our h1 {
@@ -281,7 +280,7 @@ li {
 .provide__info {
       display: flex;
       justify-content: space-around;
-      max-width: 100%;      
+      width: 100%;      
 }
 
 .provide__server { 
@@ -396,7 +395,7 @@ li {
 }
 
 .Feedback__home {    
-      max-width: 100%;
+      width: 100%;
       display: flex;
       justify-content: center;  
 }
@@ -482,15 +481,16 @@ li {
 }
 
 .portfolio__nomer {
-      margin-left: 155px;     
+      margin-left: 125px;     
  }
 
-b {
+ span.portfolio__nomer {
       position: relative; 
       top: 65px;
       color: #a29e9e;
       font-size: 16px;
-      font-weight: 700;  
+      font-weight: 700;
+      background-color: initial;  
 }
 
 .portfolio__left {   
@@ -522,7 +522,7 @@ b {
 .portfolio__pro {
       display: flex;
       justify-content: flex-end;      
-      max-width: 100%;       
+      width: 100%;       
 }
 
 .portfolio__inter {
@@ -678,12 +678,12 @@ span {
 .slider {      
       display: grid;            
       grid-template-columns: repeat(4,auto);      
-      max-width: 100%;     
+      width: 100%;        
 }
 
 .slick-slide {     
       display: grid;    
-      margin: 20px 0px 50px;        
+      margin: 20px 0px 50px 0px;        
 }
 
 .slider__slick {      
@@ -732,14 +732,6 @@ span {
      background: url('img/arrow-arrows-left.svg') #3d9ee1 0 0 / 100% no-repeat;          
 }
 
-.slick-active {
-      opacity: .7;
-}
-
-.slick-current {
-      opacity: 1;     
-}
- 
 
 .quote {
       background-color: #097e89;
@@ -748,7 +740,7 @@ span {
 
 
 .quote__exspress {  
-      margin-left: 80px;        
+      padding-left: 80px;        
 }
 
 .quote__exspress h1 {
@@ -791,7 +783,7 @@ span {
 
 .quote__bridges p:first-child{
       padding: 0px 25px;
-      width: 235px;
+      width: 230px;
       height: 55px;
       border-bottom-left-radius: 3px;
       border-top-left-radius: 3px;    
@@ -800,7 +792,7 @@ span {
 
 .quote__bridges p:nth-child(2){
       padding: 0px 25px;
-      width: 230px;
+      width: 225px;
       height: 55px;
       border-radius: 0px;
       border: 2px solid #589ba3;
@@ -809,7 +801,7 @@ span {
 
 .quote__bridges p:nth-child(3){
       padding: 0px 20px;
-      width: 120px;
+      width: 115px;
       height: 55px;
       font-size: 12px;
       font-weight: 700;
@@ -830,7 +822,7 @@ span {
       display: flex;
       justify-content: flex-start;
       margin-left: 40px;
-      max-width: 100%;   
+      width: 70%;   
 }
 
 .plans__dellet {   
@@ -871,13 +863,13 @@ span {
 .plans {
       display: flex;
       justify-content: flex-end;    
-      margin: -150px 90px 0px; 
+      margin: -155px 90px 0px;     
 }
 
 .plans__email { 
       display: flex;
       align-items: center; 
-      width: 180px;
+      width: 170px;
       height: 50px;
       padding: 0px 15px;
       background-color: #cccccc;
@@ -898,7 +890,7 @@ span {
 .plans__Subscribe {
       display: flex;
       align-items: center; 
-      width: 120px;
+      width: 115px;
       height: 50px;
       padding: 0px 25px;
       background-color: #0072bc;    
@@ -920,25 +912,39 @@ span {
 .plans__social {
       display: flex;
       justify-content: flex-end;    
-      margin: 40px 90px 0px;  
+      margin: 40px 92px 0px;     
 }
 
-.plans__social a {
+.plans__social a {     
       font-size: 18px;
       color: #c1c1c1;
       margin-left: 10px;
       font-weight: normal;
       background-color: #2e2e2e;
       padding: 12px; 
-      border-radius: 50%;  
+      border-radius: 50%;
+      padding: 11px 13px 10px 13px;      
 }
 
-.plans__social a:nth-child(1){
-      padding: 10px 15px 10px 15px;
+
+.plans__social a:nth-child(2){
+      padding: 12px 10px 12px 10px;
 }
 
-.plans__social a:nth-child(3){
-      padding: 10px 10px 10px 10px;
+.plans__social a:nth-child(3){      
+      padding: 11px 8px 8px 8px;
+}
+
+.plans__social a:nth-child(4){
+      padding: 11px 10px 5px 10px;
+}
+
+.plans__social a:nth-child(5){
+      padding: 11px 10px 10px 10px;
+}
+
+.plans__social a:nth-child(6){
+      padding: 11px 11px 8px 11px;
 }
 
 
